# halo2-TPCH

./: Cargo.toml  README.md
src/: chips.rs  circuits.rs  is_zero.rs  lib.rs  sql.rs
src/chips/: is_zero.rs  is_zero_v1.rs  is_zero_v2.rs  less_than.rs  less_than_v1_test.rs  permutation_any.rs  util.rs  utils.rs
src/chips/poseidon/: hash.rs  hash_with_instance.rs  spec.rs
src/circuits/: less_than_v1_test.rs  permutation_any_test.rs  poseidon.rs  utils.rs
src/data/: data_processing.rs
src/sql/: param10  proof  proof_q1  proof_q18  proof_q3  proof_q3_v1  proof_q5  proof_q8  proof_q9  q18_final_v1.rs  q18_final_v2.rs  q19_final_v1.rs  q1_final_v2.rs  q1_final_v3.rs  q1_final_v4.rs  q1_v1.rs  q1_v2.rs  q1_v3.rs  q3_final_v1.rs  q3_final_v2.rs  q3_final_v4.rs  q3_final_v5.rs  q3_final_v6.rs  q3_final_v7.rs  q5_final_v1.rs  q5_final_v2.rs  q5_final_v4.rs  q8_final_v2.rs  q8_final_v3.rs  q9_final_v1.rs  q9_final_v2.rs  test.rs
